# code-challenge

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  full-build-and-package.sh  requirements.txt  setup.sh
.github/workflows/: build-and-release.yml
src/brain/: brain.cpp  brain.h
src/hivemind/: hivemind.cpp
src/thoughts/: thoughts.h
test_package/: CMakeLists.txt  conanfile.py  tester.cpp
